Mon Mar 21 22:15:11 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (mod): Add Fixnum case.

	* time.c (quo): c can be Fixnum except a == FIXNUM_MIN && b == -1.
	  Such case can be optimized out because quo()'s argument is constant.

Mon Mar 21 22:09:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (rb_fix_mul_fix): multiply converted values, not
	  object VALUEs.

Mon Mar 21 20:18:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (TEST_EXCLUDES, EXCLUDE_TESTFRAMEWORK): use full spell
	  long option.

	* cygwin/GNUmakefile.in (MSYS2_ARG_CONV_EXCL): suppress path name
	  conversions by msys2.  [ruby-dev:49525] [Bug #12199]

Mon Mar 21 19:09:31 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (enc_succ_alnum_char): try to skip an invalid character
	  gap between GREEK CAPITAL RHO and SIGMA.
	  [ruby-core:74478] [Bug #12204]

Mon Mar 21 18:55:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* node.c (rb_gc_mark_node): NODE_MATCH2 can have nd_args, u3,
	  since r54100.

Sun Mar 20 21:17:13 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* internal.h (rb_int128t2big): declare only when HAVE_INT128_T.
	  fixed a compile error with VC++ introduced at r54203.

Sun Mar 20 20:10:14 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* internal.h (DLONG): defined if long is 32bit (and LONG_LONG is 64bit;
	  but LONG_LONG is always defined as 64bit), or there's int128_t.

	* internal.h (DL2NUM): defined if DLONG is defined.

	* internal.h (rb_fix_mul_fix): defined for `Fixnum * Fixnum`.

	* insns.def (opt_mul): use rb_fix_mul_fix().

	* numeric.c (fix_mul): ditto.

	* time.c (mul): ditto.

Sun Mar 20 18:53:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (fix_gt, fix_ge, fix_lt, fix_le): optimize comparisons
	  Fixnum against Bignum by rb_big_cmp in inversed order without
	  new Bignum instance.

Sun Mar 20 18:44:52 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (add): remove FIXABLE() which is in LONG2NUM().
